--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="P.ico" type="image/x-icon">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pratham</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" href="P.ico" type="image/x-icon">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- SEO Meta Tags -->
+  <title>Pratham Garg | Computer Science Student at SFU | Portfolio</title>
+  <meta name="description" content="Portfolio of Pratham Garg, a computer science student at Simon Fraser University, showcasing projects, resume, contact information, and GitHub profile. Seeking internships and opportunities in software development." />
+  <meta name="keywords" content="Pratham Garg, Computer Science, SFU, Portfolio, GitHub, Projects, Internships, Software Development, Resume" />
+  <meta name="author" content="Pratham Garg" />
+  <meta name="robots" content="index, follow" />
+
+  <!-- Social Media Meta Tags -->
+  <meta property="og:title" content="Pratham Garg | Computer Science Student at SFU | Portfolio" />
+  <meta property="og:description" content="Explore the portfolio of Pratham Garg, featuring projects with code and live demos, resume, contact details, and more." />
+  <meta property="og:url" content="https://www.prathmagarg.com" />
+  <!-- Additional tags -->
+  <link rel="canonical" href="https://www.prathamgarg.com" />
+</head>
+<body>
+<div id="root"></div>
+<script type="module" src="/src/main.jsx"></script>
+</body>
 </html>
